Change deprecated functions